Fixing the alignment of the title
Mismatch between my local side and that deployed from netlify, likely due to needing the !important specifier.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-	text-align: center;
+	text-align: center !important;
 	justify-content: center;
 	margin: auto;
 	margin-bottom: 1vh;
